# mineral

./: .gitignore  Dockerfile  README.md  eval.py  pyproject.toml  run.sh  spawner.py  test_otil.sh
docs/: dflex.md
examples/: run.py
experts/: DFlex_humanoid_demos1_return8892_len1000.pt  DFlex_humanoid_demos1_return8899_len1000.pt  experts.py
mineral/agents/: __init__.py
mineral/agents/bc/: bc.py  models.py
mineral/agents/dac/: __init__.py  dac.py
mineral/agents/ddpg/: ddpg.py  models.py  utils.py
mineral/agents/diffrl/: bptt.py  models.py  shac.py
mineral/agents/gail/: gail.py  models.py
mineral/agents/otil/: best_of_k.py  models.py  otil.py  utils.py
mineral/agents/ppo/: experience.py  models.py  ppo.py  utils.py
mineral/agents/sac/: sac.py
mineral/buffers/: nstep_replay.py
mineral/cfgs/agent/: DFlexAntDAC.yaml  DFlexAntGAIL.yaml  DFlexAntOTIL.yaml  RewarpedJumperOTIL.yaml
mineral/common/: metrics.py  parallel.py  timer.py  worker.py  writer.py
mineral/envs/: dflex.py  isaacgymenvs.py  rewarped.py
mineral/nets/: distributions.py  mlp.py  multi_encoder.py
mineral/nets/pcd/: __init__.py  dp3.py  pcd_inputs.py  pointnet.py
mineral/scripts/: humanhash.py  run.py  utils.py
scripts/: otil.sh  otil_check.sh  run.sh  run_check.sh  slurm_sapo.sh  test_singularity.sh
tasks/otil/: dflex_ant.yaml  dflex_hopper.yaml  dflex_humanoid.yaml  dflex_snu_humanoid.yaml  rewarped_ant_run.yaml  rewarped_fluid_move.yaml  rewarped_hand_flip.yaml  rewarped_hand_reorient.yaml  rewarped_rolling_flat.yaml  rewarped_soft_jumper.yaml
tasks/sapo/: dflex_ant.yaml  dflex_hopper.yaml  dflex_humanoid.yaml  dflex_snu_humanoid.yaml  rewarped_ant_run.yaml  rewarped_fluid_move.yaml  rewarped_hand_flip.yaml  rewarped_hand_reorient.yaml  rewarped_rolling_flat.yaml  rewarped_soft_jumper.yaml
